syntax = "proto2";

package com.google.closure.doclet;

import "webutil/html/types/html.proto";

option java_package = "com.google.closure.doclet";

message Element {
  required string class_name = 1;
  required bool is_enum = 2;
  required bool is_mojo = 3;
  repeated com.google.closure.doclet.Parameter param = 4;
  repeated string tag_name = 5;
  optional webutil.html.types.SafeHtmlProto comment_html = 6;
  optional string goal = 7;
}

message Parameter {
  required string name = 1;
  optional string field = 2;
  optional string method = 3;
  required string source_position = 4;
  optional webutil.html.types.SafeHtmlProto comment_html = 5;
  required string type = 6;
  optional string type_url = 7;
}
